--- a/general/theme/livecd/grub.theme.cfg
+++ b/general/theme/livecd/grub.theme.cfg
@@ -1,6 +1,12 @@
 # GRUB2 gfxmenu theme
+# 
+# fullname
+# kernel
+# vmlinuz
+# initrdImg
+# kernel_parameters `boot=live components locales=${process.env.LANG}`
+ 
 
-# GRUB2 gfxmenu theme
 
 title-color: "white"
 title-text: "Quirinux GNU/Linux"
@@ -78,60 +84,54 @@ terminal-font: "Sans Regular 12"
 
 menuentry --hotkey=1 "1) Castellano (Argentina) -> Usar o instalar Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=es_AR.UTF-8 keyboard-layouts=latam net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+  linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=es_AR.UTF-8 keyboard-layouts=latam quiet splash
+  initrd {{{initrdImg}}}
 }
 
 menuentry --hotkey=2 "2) Castellano (España) -> Usar o instalar Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=es_ES.UTF-8 keyboard-layouts=latam net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=es_ES.UTF-8 keyboard-layouts=latam quiet splash
+	initrd {{{initrdImg}}}
 }
 
 menuentry --hotkey=3 "3) Galego -> Use ou instale Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=gl_ES.UTF-8 keyboard-layouts=es net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=gl_ES.UTF-8 keyboard-layouts=es  quiet splash
+	initrd {{{initrdImg}}}
 }
 
 
 menuentry --hotkey=4 "4) Português (Brasil) -> Use ou instale o Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=pt_BR.UTF-8 keyboard-layouts=portuguese net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=pt_BR.UTF-8 keyboard-layouts=portuguese  quiet splash
+	initrd {{{initrdImg}}}
 }
 
 menuentry --hotkey=5 "5) Português (Portugal) -> Use ou instale o Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=pt_PT.UTF-8 keyboard-layouts=portuguese net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=pt_PT.UTF-8 keyboard-layouts=portuguese  quiet splash
+	initrd {{{initrdImg}}}
 }
 menuentry --hotkey=6 "6) English (EEUU) -> Use or install Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=en_US.UTF-8 keyboard-layouts=portuguese net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=en_US.UTF-8 keyboard-layouts=portuguese  quiet splash
+	initrd {{{initrdImg}}}
 }
 
 menuentry --hotkey=7 "7) English (Britain) -> Use or install Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=en_GB.UTF-8 keyboard-layouts=en net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=en_GB.UTF-8 keyboard-layouts=en  quiet splash
+	initrd {{{initrdImg}}}
 }
 
 menuentry --hotkey=8 "8) Русский -> Использовать или установить Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=ru_RU.UTF-8 keyboard-layouts=ru net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=ru_RU.UTF-8 keyboard-layouts=ru  quiet splash
+	initrd {{{initrdImg}}}
 }
 
 menuentry --hotkey=9 "Deutsch -> Verwenden oder installieren Sie Quirinux General" {
 	set background_color=black
-	linux	/live/vmlinuz-5.10.0-21-amd64 boot=live config hostname=quirinux locales=de_DE.UTF-8 keyboard-layouts=de net.ifnames=0 apparmor=0 file=/preseed.cfg --- quiet
-	initrd	/live/initrd.img-5.10.0-21-amd64
+	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=de_DE.UTF-8 keyboard-layouts=de  quiet splash
+	initrd {{{initrdImg}}}
 }
-
-
-
-
-
-
