--- a/general/theme/livecd/grub.theme.cfg
+++ b/general/theme/livecd/grub.theme.cfg
@@ -82,55 +82,56 @@ terminal-font: "Sans Regular 12"
   + label {text = "Press 'E' key to edit, 'C' for command." font = "Sans 10" color = "white" align = "left"}
 }
 
-menuentry --hotkey=1 "1) Castellano (Argentina) -> Usar o instalar Quirinux General" {
+# missing separator after propery 'name' menuentry
+menuentry "1) Castellano (Argentina) -> Usar o instalar Quirinux General" {
 	set background_color=black
   linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=es_AR.UTF-8 keyboard-layouts=latam quiet splash
   initrd {{{initrdImg}}}
 }
 
-menuentry --hotkey=2 "2) Castellano (España) -> Usar o instalar Quirinux General" {
+menuentry "2) Castellano (España) -> Usar o instalar Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=es_ES.UTF-8 keyboard-layouts=latam quiet splash
 	initrd {{{initrdImg}}}
 }
 
-menuentry --hotkey=3 "3) Galego -> Use ou instale Quirinux General" {
+menuentry "3) Galego -> Use ou instale Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=gl_ES.UTF-8 keyboard-layouts=es  quiet splash
 	initrd {{{initrdImg}}}
 }
 
 
-menuentry --hotkey=4 "4) Português (Brasil) -> Use ou instale o Quirinux General" {
+menuentry "4) Português (Brasil) -> Use ou instale o Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=pt_BR.UTF-8 keyboard-layouts=portuguese  quiet splash
 	initrd {{{initrdImg}}}
 }
 
-menuentry --hotkey=5 "5) Português (Portugal) -> Use ou instale o Quirinux General" {
+menuentry "5) Português (Portugal) -> Use ou instale o Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=pt_PT.UTF-8 keyboard-layouts=portuguese  quiet splash
 	initrd {{{initrdImg}}}
 }
-menuentry --hotkey=6 "6) English (EEUU) -> Use or install Quirinux General" {
+menuentry "6) English (EEUU) -> Use or install Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=en_US.UTF-8 keyboard-layouts=portuguese  quiet splash
 	initrd {{{initrdImg}}}
 }
 
-menuentry --hotkey=7 "7) English (Britain) -> Use or install Quirinux General" {
+menuentry "7) English (Britain) -> Use or install Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=en_GB.UTF-8 keyboard-layouts=en  quiet splash
 	initrd {{{initrdImg}}}
 }
 
-menuentry --hotkey=8 "8) Русский -> Использовать или установить Quirinux General" {
+menuentry "8) Русский -> Использовать или установить Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=ru_RU.UTF-8 keyboard-layouts=ru  quiet splash
 	initrd {{{initrdImg}}}
 }
 
-menuentry --hotkey=9 "Deutsch -> Verwenden oder installieren Sie Quirinux General" {
+menuentry "Deutsch -> Verwenden oder installieren Sie Quirinux General" {
 	set background_color=black
 	linux {{{vmlinuz}}} {{{kernel_parameters}}} locales=de_DE.UTF-8 keyboard-layouts=de  quiet splash
 	initrd {{{initrdImg}}}
