--- a/general/theme/livecd/grub.theme.cfg
+++ b/general/theme/livecd/grub.theme.cfg
@@ -1,7 +1,7 @@
 # GRUB2 gfxmenu theme
 
 # Global Property
-title-color: "blue"
+title-color: "red"
 title-text: "Quirinux general: by Charlie Martínez"
 title-font: "Sans Regular 20"
 desktop-color: "black"
@@ -15,7 +15,7 @@ desktop-image: "splash.png"
   height = 130
   item_font = "Sans Regular 12"
   item_color = "black"
-  selected_item_color = "blue"
+  selected_item_color = "red"
   item_height = 20
   item_padding = 15
   item_spacing = 5
