--- a/general/theme/livecd/grub.theme.cfg
+++ b/general/theme/livecd/grub.theme.cfg
@@ -1,10 +1,10 @@
 # GRUB2 gfxmenu theme
 
 # Global Property
-title-color: "red"
+title-color: "#c00090f0"
 title-text: "Quirinux general: by Charlie Martínez"
 title-font: "Sans Regular 20"
-desktop-color: "black"
+#desktop-color: "black"
 desktop-image: "splash.png"
 
 # show boot_menu
@@ -41,3 +41,4 @@ desktop-image: "splash.png"
   left = 2%
   + label {text = "Press 'E' key to edit, 'C' for command." font = "Sans 10" color = "white" align = "left"}
 }
+Footer
