--- a/general/theme/livecd/isolinux.theme.cfg
+++ b/general/theme/livecd/isolinux.theme.cfg
@@ -1,17 +1,16 @@
 #
 # eggs: isolinux.theme
 #
-MENU TITLE Quirinux GNU/Linux
-MENU BACKGROUND splash.png
 
 # MENU COLOR element backgound foreground shadow
 # background and foreground are hexadecimal digits for alpha (opacity), red, green and blue,
 # respectively. #00000000 represents fully transparent, and #ffffffff represents opaque white.
 # shadow none/std
+
 MENU COLOR screen	    37;40      #80ffffff #00000000 std
 MENU COLOR border	    30;44      #40000000 #00000000 std
 MENU COLOR title	    1;36;44    #c00090f0 #00000000 std
-MENU COLOR unsel	    37;44      #0000FF    #00000000 std
+MENU COLOR unsel	    37;44      #c00090f0    #00000000 std
 MENU COLOR sel  	    7;37;40    #FF00FF    #E0FFFF all
 MENU COLOR hotsel	    1;7;37;40  #FF00FF    #E0FFFF  all
 MENU COLOR disabled	    1;30;44    #c00090f0 #00000000 std
@@ -27,20 +26,21 @@ MENU COLOR timeout	    1;37;40    #c00090f0 #00000000 std
 MENU COLOR help 	    37;40      #c00090f0 #00000000 std
 MENU COLOR msg07	    37;40      #c00090f0 #00000000 std
 
-# POSIZIONE
-MENU WIDTH 80
-MENU MARGIN 10
-MENU PASSWORDMARGIN 3
-MENU ROWS 12
-MENU TABMSGROW 18
-MENU CMDLINEROW 18
-MENU ENDROW -1
-MENU PASSWORDROW 11
-MENU TIMEOUTROW 20
-MENU HELPMSGROW 22
-MENU HELPMSGENDROW -1
-MENU HIDDENROW -2
-MENU HSHIFT 0
-MENU VSHIFT 0
-
-MENU - Press ENTER to boot
+# Position
+menu width  80
+menu margin 10
+#menu passwordmargin 3
+menu rows 12
+menu tabmsgrow 18
+menu cmdlinegrow 18
+menu endrow -1
+menu passwordrow 11
+menu timeout 20
+menu helpmsggrow 22
+menu helpmsgendrow  -1
+menu hiddenrow -2
+menu hshift 0
+menu vshift 0
+menu title Quirinux GNU/Linux by Charlie Martínez
+menu background splash.png
+menu tabmsg Press ENTER to boot or TAB to edit a menu entry
