--- a/general/theme/livecd/grub.theme.cfg
+++ b/general/theme/livecd/grub.theme.cfg
@@ -1,10 +1,10 @@
 # GRUB2 gfxmenu theme
 
 # Global Property
-title-color: "#c00090f0"
-title-text: "Quirinux general: by Charlie Martínez"
+title-color: "blue"
+title-text: "Quirinux GNU/Linux by Charlie Martínez
 title-font: "Sans Regular 20"
-#desktop-color: "black"
+desktop-color: "black"
 desktop-image: "splash.png"
 
 # show boot_menu
@@ -15,7 +15,7 @@ desktop-image: "splash.png"
   height = 130
   item_font = "Sans Regular 12"
   item_color = "black"
-  selected_item_color = "red"
+  selected_item_color = "blue"
   item_height = 20
   item_padding = 15
   item_spacing = 5
@@ -41,4 +41,3 @@ desktop-image: "splash.png"
   left = 2%
   + label {text = "Press 'E' key to edit, 'C' for command." font = "Sans 10" color = "white" align = "left"}
 }
-Footer
